# ucl-open

./: .gitattributes  .gitignore  .gitmodules  Directory.Build.props  README.md  UclOpen.sln  pyproject.toml
.bonsai/: Bonsai.config  NuGet.config
.config/: dotnet-tools.json
.github/workflows/: UclOpen.yml  ucl-open-rigs.yml
docs/: README.md  docfx.json  export-images.ps1  index.md  toc.yml
docs/articles/: contributing.md  project-structure.md  toc.yml
docs/articles/pyrat/: pyrat-integration.md  toc.yml
docs/assets/workflows/: IngestConfiguration.bonsai  MySensor.bonsai
docs/template/public/: main.js
docs/tutorials/: bonsai-implementation.md  building-deploying.md  experiment-design.md  experiment-schemas.md  hardware-modules.md  introduction.md  prerequisites.md  project-structure.md  quickstart.md  toc.yml
docs/workflows/pyrat/: PyRat_test.bonsai  pyrat_test.bonsai
notebooks/: pyrat_water_demo.ipynb
scripts/: deploy.ps1
src/PyRAT-API/: README.md  mutation_test.py  pyrat_api.py
src/PyRAT_GUI/: gui_Qt.py  gui_Qt_refactored.py  gui_test.py  pyrat_server.yaml  pyrat_test.bonsai
src/UclOpen.Bonsai/: UclOpen.Bonsai.sln
src/UclOpen.Core/: DataTypes.Generated.cs  FormatDate.cs  UclOpen.Core.csproj
src/UclOpen.Core/Properties/: AssemblyInfo.cs
src/UclOpen.Devices/: ArduinoLedDriver.bonsai  LickSpoutStage.bonsai  LicketySplit.bonsai  SerialDevice.bonsai  TriggeredSpinnaker.bonsai  UclOpen.Devices.csproj
src/UclOpen.Devices/BehaviorBoard/: BehaviorBoard.bonsai  CameraTriggerController.bonsai  PulseController.bonsai  README.md  RunningWheel.bonsai  Timestamps.bonsai
src/UclOpen.Devices/Properties/: AssemblyInfo.cs
src/UclOpen.Logging/: JsonWriter.cs  LogController.bonsai  LogData.bonsai  LogHarpDevice.bonsai  LogVideo.bonsai  UclOpen.Logging.csproj
src/UclOpen.Logging/Properties/: AssemblyInfo.cs  launchSettings.json
src/UclOpen.PyRat/: AddComment.cs  SetSessionEnd.cs  UclOpen.PyRat.csproj
src/UclOpen.Pyrat/: UclOpen.Pyrat.Generated.cs  UpdateWaterAmount.cs
src/UclOpen.Video/: TriggeredSpinnaker.cs  UclOpen.Video.csproj  VideoDataFrame.cs
src/UclOpen.Video/Properties/: AssemblyInfo.cs
src/UclOpen.Vision/: UclOpen.Vision.csproj
src/UclOpen.Vision/Properties/: AssemblyInfo.cs
src/UclOpen.Vision/SyncQuad/: SyncQuad.bonsai
src/ucl_open/: controllers.py  data.py  data_types.py  device.py  displays.py  experiment.py  harp.py  task.py  video.py
src/ucl_open/_generators/: json_schema.py  session_schema.py
src/ucl_open/core/: __init__.py  base.py  data.py  data_types.py  experiment.py  rig.py  schema.py  task.py
src/ucl_open/devices/: __init__.py  arduino.py  behavior_board.py  data_types.py  device.py  harp.py  lick_spout_stage.py  lickety_split.py  serial.py
src/ucl_open/pyrat/: __init__.py  client.py  models.py  session.py
src/ucl_open/rigs/: controllers.py  data_types.py  displays.py  experiment.py  harp.py  task.py
src/ucl_open/schemas/: data_types.json  pyrat_session.json
src/ucl_open/video/: __init__.py  video.py
src/ucl_open/vision/: __init__.py  displays.py  vision.py
src/ucl_open_rigs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
template/: README.md  copier.yml  pyproject.toml.jinja  rig-template.sln
template/.bonsai/: Bonsai.config
template/examples/: rig.py.jinja  task.py.jinja
template/local_packages/: UclOpen.Devices.0.1.0-dev0.nupkg  UclOpen.Logging.0.1.0-dev0.nupkg
template/scripts/: deploy.ps1
template/src/{{ python_folder_name }}/: rig.py.jinja
template/template/: .gitignore  README.md  pyproject.toml.jinja
template/template/.bonsai/: Bonsai.config  Bonsai.config.jinja
template/template/examples/: rig.py.jinja  session.py.jinja
template/template/local_packages/: UclOpen.Core.0.1.0-dev0.nupkg  UclOpen.Devices.0.1.0-dev0.nupkg  UclOpen.Logging.0.1.0-dev0.nupkg  (+1 more)
test/: README.md  rig.py  schema.py
tests/integration/: test_rig.py
tests/task/: test_task.py
tests/video/: test_video.py
(+19 files in other folders)
